# coding-agent

./: README.md
agent/: pyproject.toml
agent/my_agent/: agent.py
ui/: package.json  pnpm-lock.yaml
ui/app/api/copilotkit/: route.ts
ui/app/chat/: page.tsx
ui/app/components/: terminal.tsx
ui/app/components/ui/: badge.tsx
