[project]
name = "my_agent"
version = "0.1.0"
description = "Starter"
authors = [
    { name = "Ariel Weinberger", email = "weinberger.ariel@gmail.com" }
]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.1"
langchain-anthropic = "^0.2.1"
langchain = "^0.3.1"
openai = "^1.51.0"
langchain-community = "^0.3.1"
copilotkit = "0.1.30"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.25"
langgraph-cli = { extras = ["inmem"], version = "^0.1.64" }
langchain-groq = "^0.2.3"

[tool.poetry.scripts]
demo = "my_agent.demo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
